--- a/WS/modifica.html
+++ b/WS/modifica.html
@@ -4,5 +4,5 @@
   <div>
     <textarea name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea>
   </div>
-  <div><input type="submit" value="Salva" /></div>
+  <div><input type="submit" value="salva" /></div>
 </form>
